--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: rgb(251, 251, 239);
+  font-family: Inter;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  background-color: #F55A5A;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+}
+
+nav img{
+  margin-right: 8px;
+}
+
+section{
+  padding: 20px;
+}
+
+.place-img{
+  width: 170px;
+  border-radius: 10px;
+  box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.37);
+}
+
+.card{
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  position: relative;
+  border-bottom: 1px solid #ccc;
+}
+
+.card:nth-child(3){
+  border: none;
+}
+
+.location{
+  margin-left: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.location-icon{
+  margin-right: 7px;
+  width: 7.5px;
+  height: 10px;
+}
+
+.location p{
+  margin-right: 14px;
+  font-size: 14px;
+  letter-spacing: 0.13em;
+  color: #2B283A;
+}
+
+.location a{
+  font-size: 12px;
+  color: #918E9B;
+}
+
+.title h1 {
+  margin: -5px 0px 0px 25px;
+  font-size: 25px;
+  color: #2B283A;
+}
+
+.timing p{
+  margin: 25px 0px 0px 25px ;
+  font-size: 15px;
+}
+
+.info{
+  margin:10px 0px 0px 25px;
+  font-size: 17px;
+  max-width: 350px;
+}
+
+.info p{
+  margin: 0;
 }
